fixed header positioning problem, now it is about the rest of the content of the page. Used z-index (no way)

--- a/css/style.css
+++ b/css/style.css
@@ -415,6 +415,10 @@ body {
 /***************************/
 /* HEADER */
 /***************************/
+header {
+  z-index: 99999999999;
+}
+
 .header__nav {
   display: flex;
   justify-content: space-between;
